--- a/config
+++ b/config
@@ -3,5 +3,5 @@ mysql_root_password=AKwWM4Qu2GRppJ7
 db_pass=AKwWM4Qu2GRppJ7
 pg_pass=AKwWM4Qu2GRppJ7
 redis_pass=AKwWM4Qu2GRppJ7
-repositorio=https://github.com/ldurans/izing.open.io.git
+repositorio=https://github.com/cleitonme/izing.open.io.git
 ipservidorubuntu=192.168.1.10
